x/programs/rust/sdk_macros/tests/ui/not-pub.rs
use sdk_macros::public;

#[allow(unused_imports)]
use wasmlanche_sdk::Context;

#[public]
fn test(_: Context) {}

fn main() {}
